--- a/CrawlerGame.Client/CrawlerGame.Client.csproj
+++ b/CrawlerGame.Client/CrawlerGame.Client.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CrawlerGame.Library\CrawlerGame.Library.csproj" />
+    <ProjectReference Include="..\CrawlerGame.Logic\CrawlerGame.Logic.csproj" />
   </ItemGroup>
 
 </Project>
