--- a/CrawlerGame.Logic/CrawlerGame.Logic.csproj
+++ b/CrawlerGame.Logic/CrawlerGame.Logic.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CrawlerGame.Logic\CrawlerGame.Logic.csproj" />
+    <PackageReference Include="OpenAI" Version="1.7.2" />
   </ItemGroup>
 
 </Project>
