--- a/CrawlerGame.Logic/CrawlerGame.Logic.csproj
+++ b/CrawlerGame.Logic/CrawlerGame.Logic.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="OpenAI" Version="1.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CrawlerGame.Library\CrawlerGame.Library.csproj" />
+  </ItemGroup>
+
 </Project>
