removed unnecesarry App class.

--- a/CrawlerGame.Client/appsettings.json
+++ b/CrawlerGame.Client/appsettings.json
@@ -1,6 +1,5 @@
 {
   "OpenAI": {
-    "ApiKey": "MY-KEY",
-    "Theme": "Harry Potter"
+    "ApiKey": "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"
   }
 }
