Implemented Client/Server structure

--- a/CrawlerGame.Client/appsettings.json
+++ b/CrawlerGame.Client/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "OpenAI": {
-    "ApiKey": "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",
-    "Model": "text-davinci-003"
+  "Client": {
+    "ServerIp": "localhost",
+    "ServerPort": 5556
   }
 }
