Cleaned up project structure

--- a/CrawlerGame.Server/appsettings.json
+++ b/CrawlerGame.Server/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "PpenAI": {
+  "Game": {
+    "SecondsPerMinute": 15
+  },
+  "OpenAI": {
     "ApiKey": "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",
     "Model": "text-davinci-003"
   },
