Refactored openAI service to use completion endpoint with fine-tuned model

--- a/CrawlerGame.Server/appsettings.json
+++ b/CrawlerGame.Server/appsettings.json
@@ -4,7 +4,8 @@
   },
   "OpenAI": {
     "ApiKey": "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",
-    "Model": "text-davinci-003"
+    "Model": "text-davinci-003",
+    "CompletionSuffix": "#END#"
   },
   "Server": {
     "Port": 5556
