--- a/NeuralJourney.Logic/NeuralJourney.Logic.csproj
+++ b/NeuralJourney.Logic/NeuralJourney.Logic.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="OpenAI" Version="1.7.2" />
+		<PackageReference Include="Serilog" Version="3.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
