server/client communication is working again

--- a/NeuralJourney.Client/appsettings.json
+++ b/NeuralJourney.Client/appsettings.json
@@ -2,5 +2,23 @@
   "Client": {
     "ServerIp": "localhost",
     "ServerPort": 5556
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "NeuralJourney.Client" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "ClientConsoleSink",
+        "Args": {
+          "outputTemplate": ">{Message:lj}{NewLine}",
+          "restrictedToMinimumLevel": "Information",
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, NeuralJourney.Client.ClientConsoleSink"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "Neural Journey Client"
+    }
   }
 }
