Mostly setilog improvements

--- a/NeuralJourney.Client/appsettings.json
+++ b/NeuralJourney.Client/appsettings.json
@@ -3,16 +3,43 @@
     "ServerIp": "localhost",
     "ServerPort": 5556
   },
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "NeuralJourney.Client" ],
+  "SerilogClient": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "NeuralJourney.Client" ],
     "MinimumLevel": "Information",
     "WriteTo": [
       {
         "Name": "ClientConsoleSink",
         "Args": {
-          "outputTemplate": ">{Message:lj}{NewLine}",
+          "outputTemplate": "{Message:lj}{NewLine}",
           "restrictedToMinimumLevel": "Information",
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, NeuralJourney.Client.ClientConsoleSink"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Client/error-log-.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Error",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [DBG] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Client/debug-log-.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Debug",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [DBG] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Client/info-log-.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Information",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [DBG] {Message}{NewLine}{Exception}"
         }
       }
     ],
