Finished setting up serilog

--- a/NeuralJourney.Client/appsettings.json
+++ b/NeuralJourney.Client/appsettings.json
@@ -1,51 +1,12 @@
 {
   "Client": {
-    "ServerIp": "localhost",
-    "ServerPort": 5556
-  },
-  "SerilogClient": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "NeuralJourney.Client" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "ClientConsoleSink",
-        "Args": {
-          "outputTemplate": "{Message:lj}{NewLine}",
-          "restrictedToMinimumLevel": "Information",
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, NeuralJourney.Client.ClientConsoleSink"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/Client/error-log-.txt",
-          "rollingInterval": "Day",
-          "restrictedToMinimumLevel": "Error",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [DBG] {Message}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/Client/debug-log-.txt",
-          "rollingInterval": "Day",
-          "restrictedToMinimumLevel": "Debug",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [DBG] {Message}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/Client/info-log-.txt",
-          "rollingInterval": "Day",
-          "restrictedToMinimumLevel": "Information",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [DBG] {Message}{NewLine}{Exception}"
-        }
-      }
-    ],
-    "Enrich": [ "FromLogContext" ],
-    "Properties": {
-      "Application": "Neural Journey Client"
+    "Network": {
+      "ServerIp": "localhost",
+      "ServerPort": 5556
+    },
+    "Serilog": {
+      "LogFilePath": "../../../../Logs/client-.txt",
+      "FileOutputTemplate": "[{@t:HH:mm:ss} {@l:u3}] {@m} \n{#if @x is not null}\nException: {@x} \nException Details: {ExceptionDetail} \n\n{#end}"
     }
   }
 }
