refactored exception layer

--- a/NeuralJourney.Client/appsettings.json
+++ b/NeuralJourney.Client/appsettings.json
@@ -5,9 +5,7 @@
       "ServerPort": 5556
     },
     "Serilog": {
-      "LogLevel": "Debug",
-      "LogFilePath": "../../../../Logs/client-.txt",
-      "FileOutputTemplate": "[{@t:HH:mm:ss} {@l:u3}] {@m} \n{#if @x is not null}\nException: {@x} \nException Details: {ExceptionDetail} \n\n{#end}"
+      "LogLevel": "Debug"
     }
   }
 }
