--- a/NeuralJourney.Client/appsettings.json
+++ b/NeuralJourney.Client/appsettings.json
@@ -5,7 +5,8 @@
       "ServerPort": 5556
     },
     "Serilog": {
-      "LogLevel": "Debug"
+      "LogLevel": "Debug",
+      "SeqUrl": "http://localhost:5341/"
     }
   }
 }
